--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
-baseURL = "https://example.com"
-title = "Website Name"
+baseURL = "/"
+title = "Ruzica Gajic"
 theme = "etch"
 languageCode = "en-US"
 enableInlineShortcodes = true
 
 [params]
-  description = "Your site description"
-  copyright = "Copyright © 2021 Your Name"
+  description = "This is my personal blog"
+  copyright = "Copyright © 2021 Ruzica Gajic"
   dark = "auto"
   highlight = true
 
