--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,13 @@ enableInlineShortcodes = true
     url = "/about/"
     weight = 20
 
+  [[menu.main]]
+    identifier = "resources"
+    name = "resources"
+    title = "resources"
+    url = "/resources/"
+    weight = 30
+
 [permalinks]
   posts = "/:title/"
 
