--- a/config.toml
+++ b/config.toml
@@ -2,19 +2,62 @@ baseURL = "/"
 title = "Ruzica Gajic"
 theme = "etch"
 languageCode = "en-US"
+pygmentsUseClasses = true
+pygmentsCodeFences = true
 enableInlineShortcodes = true
 
 [params]
   description = "This is my personal blog"
   copyright = "Copyright © 2021 Ruzica Gajic"
   dark = "auto"
+  author = "Ruzica Gajic"
+  authorURL = "https://www.linkedin.com/in/ruzica-gajic/"
   highlight = true
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ""
+    lineAnchors = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = "monokai"
+    tabWidth = 4
+
+# [markup]
+#   [markup.highlight]
+#     anchorLineNos = true
+#     codeFences = true
+#     guessSyntax = true
+#     hl_Lines = ""
+#     lineAnchors = ""
+#     lineNoStart = 1
+#     lineNos = false
+#     lineNumbersInTable = true
+#     noClasses = true
+#     style = "fruity"
+#     tabWidth = 4
+
+# [markup.highlight]
+#   codeFences = true
+#   guessSyntax = true
+#   hl_Lines = ""
+#   lineNoStart = 0
+#   lineNos = true
+#   lineNumbersInTable = true
+#   tabWidth = 2
+#   noClasses = false
+
 
 [menu]
   [[menu.main]]
-    identifier = "posts"
-    name = "posts"
-    title = "posts"
+    identifier = "blog"
+    name = "blog"
+    title = "blog"
     url = "/"
     weight = 10
 
@@ -39,8 +82,6 @@ enableInlineShortcodes = true
   # Allow HTML in Markdown
   unsafe = true
 
-  [markup.tableOfContents]
-    ordered = true
+[markup.tableOfContents]
+  ordered = true
     
-pygmentsCodeFences = true
-pygmentsUseClasses = true
